# SpotyCli

./: .env  .env.example  .gitignore  .spotify_recently_played  Cargo.toml  README.md  chat.txt  controls.txt  keys.txt  test_controls.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/auth/: mod.rs
src/models/: mod.rs
src/ui/: mod.rs
