[package]
name = "spotycli"
version = "0.1.0"
edition = "2021"
default-run = "spotycli"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
base64 = "0.22"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
sha2 = "0.10"
rand = "0.8"
warp = "0.3"
webbrowser = "1.0"
